syntax = "proto3";

option csharp_namespace = "myGrpc";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc CreateCv (stream  Candidate) returns (CreateCvResponse);
  rpc DownloadCv (DownloadByName) returns (stream  Candidate);
  rpc CreateDownloadCv (stream Candidate) returns (stream Candidates);
  rpc GetCv(Empty) returns ( Candidate);
}
message Empty{

}
message Candidates {
    repeated Candidate Candidates = 2;
}

message Candidate {
    string Name = 1;
    repeated Job Jobs = 2;
}
message Job {
    string Title = 1;
    int32 Salary = 2;
    string JobDescription = 3;
}
message DownloadByName {
    string Name = 1;
}
message CreateCvResponse {
    bool IsSuccess = 1;
}